@@ -41,7 +41,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.hmc.constants.Constants.EMAIL_TYPE;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.UNAVAILABILITY_DOW_TYPE;
@@ -201,7 +200,7 @@ public class GetHearingResponseMapper extends GetHearingResponseCommonCode {
                 relatedParty.setRelationshipType(partyRelationshipDetailsEntity.getRelationshipType());
                 return relatedParty;
             })
-            .collect(Collectors.toList());
+            .toList();
 
         individualDetails.setRelatedParties(relatedParties);
         return individualDetails;
@@ -267,6 +266,7 @@ public class GetHearingResponseMapper extends GetHearingResponseCommonCode {
         hearingDetails.setPanelRequirements(setPanelRequirements(hearingEntity));
         hearingDetails.setHearingIsLinkedFlag(hearingEntity.getIsLinkedFlag());
         hearingDetails.setHearingChannels(setHearingChannel(caseHearingRequestEntity));
+        hearingDetails.setIsAPanelFlag(caseHearingRequestEntity.getIsAPanelFlag());
         return hearingDetails;
     }
 
